--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<!--  Hibernate validator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
 		<!-- Componentes padrão... -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
