--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 paginacao.qtd_por_pagina=25
 #spring.profiles.active=develop
 
-
+server.port=8091
+security.basic.enable: false
+security.ignored=/**
 
