Correções p/ funcionamento do controller exemplo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ paginacao.qtd_por_pagina=25
 #spring.profiles.active=develop
 
 server.port=8091
-security.basic.enable: false
-security.ignored=/**
+#security.basic.enable: false
+#security.ignored=/**
 
