Iniciada implementacao Jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=8091
 #security.basic.enable: false
 #security.ignored=/**
 
+# JWT
+jwt.secret=_@HçR34R5T65S775asdyyfg_
+# Token com duração de 7 dias (value em segundos)
+jwt.expiration=604800
+
